added one image, added content, added styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
 
+    <nav>
+        <ul>
+            <li>Philosophy</li>
+            <li>Design</li>
+            <li>Engineering</li>
+            <li>Safety</li>
+            <li>History</li>
+            <li>Advantages</li>
+            <li>Model Comparison</li>
+        </ul>
+    </nav>
+
     <header>
         <h1>Audi vs. Volvo - A Competitive Comparison</h1>
     </header>
     
-    <section>
+    <section id="philosophy">
         <h2>Brand Philosophy and Positioning</h2>
         <div class="split-section">
             <section>
@@ -39,9 +51,123 @@
         </div>
     </section>
 
-    <section>
+    <section id="design">
         <h2>Design Language and Aesthetics</h2>
+        <div class="split-section">
+            <section>
+                <h3>Audi</h3>
+                <ul>
+                    <li>Clean, minimalist, agressive styling</li>
+                    <li>Singleframe Grille</li>
+                    <li>High quality interior materials</li>
+                    <li>Technological approach (digital screens)</li>
+                    <li>Emotionally driven designs, visually striking</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Volvo</h3>
+                <ul>
+                    <li>Minimalism with clean lines and functional elegance</li>
+                    <li>Spaciousness, visibility, ergonomics</li>
+                    <li>Less focused on visual appeal</li>
+                </ul>
+            </section>
+        </div>
     </section>
+
+    <section id="engineering">
+        <h2>Engineering Performance</h2>
+        <div class="split-section">
+            <section>
+                <h3>Audi</h3>
+                <ul>
+                    <li>Significant emphasis on performance engineering</li>
+                    <li>QUATTRO ALL WHEEL DRIVE</li>
+                    <li>Powerful engines</li>
+                    <li>Advanced drivetrains</li>
+                    <li>Sport-tuned suspension</li>
+                    <li>Driver focus</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Volvo</h3>
+                <ul>
+                    <li>"Industry-leading" safety</li>
+                    <li>Efficient powertrains, focus on sustainability</li>
+                    <li>Comfort over sportiness</li>
+                </ul>
+            </section>
+        </div>
+    </section>
+
+    <section id="safety">
+        <h2>Safety Approach</h2>
+        <div class="split-section">
+            <section>
+                <h3>Audi</h3>
+                <ul>
+                    <li>Comprehensive safety systems</li>
+                    <li>Preventative tech</li>
+                    <li>Driver's assistance</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Volvo</h3>
+                <ul>
+                    <li>Invented 3 point seatbelt in 1959</li>
+                    <li>Side impact protection, whiplash protection</li>
+                    <li>Pedestrian detection</li>
+                    <li>Goal to have zero people killed or injured in Volvos</li>
+                </ul>
+            </section>
+        </div>
+    </section>
+
+    <section id="history">
+        <h2>History</h2>
+        <p>Since we know Audi's history, let's skip to Volvo's.</p>
+        <ul>
+            <li>Founded in 1927 in Sweden</li>
+            <li>Invented 3 point seatbelt in 1959</li>
+            <li>Lambda Sond (1976) 3-way catalytic converter with O2 sensor reduced emissions by 90%</li>
+            <li>Acquired by Ford Motor Company in 1999</li>
+            <li>Acquired by Geely in 2010 aka China</li>
+        </ul>
+    </section>
+
+    <section id="advantages">
+        <h2>Competitive Advantages</h2>
+        <div class="split-section">
+            <section>
+                <h3>Audi</h3>
+                <ol>
+                    <li>Performance credibility</li>
+                    <li>Technological Innovation</li>
+                    <li>Brand Prestige</li>
+                    <li>Design Appeal</li>
+                    <li>Broad Product Range</li>
+                </ol>
+            </section>
+            <section>
+                <h3>Volvo</h3>
+                <ol>
+                    <li>Safety Leadership</li>
+                    <li>Unique Design Identity</li>
+                    <li>Early Electrification Commitment</li>
+                    <li>Family-friendly Focus</li>
+                    <li>Ethical Brand Pereception</li>
+                </ol>
+            </section>
+        </div>
+    </section>
+
+    <section id="models">
+        <h2>Model Range Comparison</h2>
+    </section>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
