Finished home page content, started model page

--- a/index.html
+++ b/index.html
@@ -3,152 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audi vs. Volvo - A Competitive Comparison</title>
+    <title>Audi vs. Volvo - Competitive Comparison</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <nav>
-        <ul>
-            <li>Philosophy</li>
-            <li>Design</li>
-            <li>Engineering</li>
-            <li>Safety</li>
-            <li>History</li>
-            <li>Advantages</li>
-            <li>Model Comparison</li>
-        </ul>
-    </nav>
-
-    <header>
-        <h1>Audi vs. Volvo - A Competitive Comparison</h1>
+    <header class="home-header">
+        <h1>Audi vs. Volvo</h1>
     </header>
+
+    <nav class="home-nav">
+        <ul class="page-links">
+        <li><a href="#philosophy">Philosophy</a></li>
+        <li><a href="#design">Design</a></li>
+        <li><a href="#engineering">Engineering</a></li>
+        <li><a href="#safety">Safety</a></li>
+        <li><a href="#history">History</a></li>
+        <li><a href="#advantages">Advantages</a></li>
+        </ul>
+        <a href="./models.html"><button id="models-btn">See Models</button></a>
+    </nav>
     
-    <section id="philosophy">
+    <section id="philosophy" class="long-text">
         <h2>Brand Philosophy and Positioning</h2>
-        <div class="split-section">
-            <section>
-                <h3>Audi</h3>
-                <ul>
-                    <li>Technological advancement</li>
-                    <li>Performance</li>
-                    <li>Sophisticated design</li>
-                    <li>Vorsprung Durch Technik</li>
-                    <li>Commitment to innovation</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Volvo</h3>
-                <ul>
-                    <li>Safety reputation</li>
-                    <li>Scandinavian design</li>
-                    <li>Pragmatic luxury</li>
-                    <li>Environmental consciousness</li>
-                    <li>Family oriented</li>
-                    <li>Thoughtful, durable vehicles with class leading safety</li>
-                </ul>
-            </section>
-        </div>
+        <p>
+            Audi positions itself as a premium German engineering brand focused on technological advancement, performance, and sophisticated design. Their slogan "Vorsprung durch Technik" (Progress through Technology) encapsulates their commitment to innovation. Audi competes directly with other German luxury brands like BMW and Mercedes-Benz.
+        </p>
+        <p>
+            Volvo, on the other hand, has built its reputation primarily around safety and Scandinavian design principles. The Swedish manufacturer emphasizes pragmatic luxury, environmental consciousness, and family-oriented vehicles. Their brand identity is less about sporty performance and more about creating thoughtful, durable vehicles with class-leading safety features.
+        </p>
     </section>
 
-    <section id="design">
+    <section id="design" class="long-text">
         <h2>Design Language and Aesthetics</h2>
-        <div class="split-section">
-            <section>
-                <h3>Audi</h3>
-                <ul>
-                    <li>Clean, minimalist, agressive styling</li>
-                    <li>Singleframe Grille</li>
-                    <li>High quality interior materials</li>
-                    <li>Technological approach (digital screens)</li>
-                    <li>Emotionally driven designs, visually striking</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Volvo</h3>
-                <ul>
-                    <li>Minimalism with clean lines and functional elegance</li>
-                    <li>Spaciousness, visibility, ergonomics</li>
-                    <li>Less focused on visual appeal</li>
-                </ul>
-            </section>
-        </div>
+        <p>
+            Audi is known for clean, minimalist yet aggressive styling with sharp lines and a distinctive front grille (the "Singleframe" grille). Their interiors feature high-quality materials and a technology-forward approach with digital displays. Audi designs tend to be more emotionally driven, with a focus on creating visually striking vehicles.
+        </p>
+        <p>
+            Volvo's design language embraces Scandinavian minimalism with clean, simple lines and functional elegance. Their interiors feature natural materials like wood and leather combined with straightforward controls and layouts. Volvo designs typically prioritize spaciousness, visibility, and ergonomics over dramatic styling.
+        </p>
     </section>
 
-    <section id="engineering">
+    <section id="engineering" class="long-text">
         <h2>Engineering Performance</h2>
-        <div class="split-section">
-            <section>
-                <h3>Audi</h3>
-                <ul>
-                    <li>Significant emphasis on performance engineering</li>
-                    <li>QUATTRO ALL WHEEL DRIVE</li>
-                    <li>Powerful engines</li>
-                    <li>Advanced drivetrains</li>
-                    <li>Sport-tuned suspension</li>
-                    <li>Driver focus</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Volvo</h3>
-                <ul>
-                    <li>"Industry-leading" safety</li>
-                    <li>Efficient powertrains, focus on sustainability</li>
-                    <li>Comfort over sportiness</li>
-                </ul>
-            </section>
-        </div>
-    </section>
-
-    <section id="safety">
-        <h2>Safety Approach</h2>
-        <div class="split-section">
-            <section>
-                <h3>Audi</h3>
-                <ul>
-                    <li>Comprehensive safety systems</li>
-                    <li>Preventative tech</li>
-                    <li>Driver's assistance</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Volvo</h3>
-                <ul>
-                    <li>Invented 3 point seatbelt in 1959</li>
-                    <li>Side impact protection, whiplash protection</li>
-                    <li>Pedestrian detection</li>
-                    <li>Goal to have zero people killed or injured in Volvos</li>
-                </ul>
-            </section>
-        </div>
-    </section>
-
-    <section id="history">
-        <h2>History</h2>
-        <p>Since we know Audi's history, let's skip to Volvo's.</p>
+        <p>
+            Audi places significant emphasis on performance engineering. They pioneered Quattro all-wheel drive technology, which has become central to their brand identity. Audi vehicles typically offer:
+        </p>
         <ul>
-            <li>Founded in 1927 in Sweden</li>
-            <li>Invented 3 point seatbelt in 1959</li>
-            <li>Lambda Sond (1976) 3-way catalytic converter with O2 sensor reduced emissions by 90%</li>
-            <li>Acquired by Ford Motor Company in 1999</li>
-            <li>Acquired by Geely in 2010 aka China</li>
+            <li>Powerful engines, including high-performance RS variants</li>
+            <li>Advanced drivetrain technology</li>
+            <li>Sport-tuned suspensions</li>
+            <li>Driver-focused dynamics</li>
+        </ul>
+        <p>
+            Volvo prioritizes different engineering values:
+        </p>
+        <ul>
+            <li>Industry-leading safety innovations</li>
+            <li>Efficient powertrains with a focus on sustainability</li>
+            <li>Comfortable ride quality over sporty handling</li>
+            <li>Practical engineering solutions that enhance everyday usability</li>
         </ul>
     </section>
 
-    <section id="advantages">
+    <section id="safety" class="long-text">
+        <h2>Safety Approach</h2>
+        <p>
+            Audi implements comprehensive safety systems as expected of a premium brand, with a focus on preventative technology and driver assistance features. Their safety approach is part of their broader technological package.
+        </p>
+        <p>
+            Volvo has made safety their defining characteristic for decades. They invented the three-point seatbelt in 1959 and released the patent freely to all manufacturers. Volvo pioneered numerous safety technologies, including:
+        </p>
+        <ul>
+            <li>Side-impact protection systems</li>
+            <li>Whiplash protection</li>
+            <li>Pedestrian detection systems</li>
+            <li>Their ambitious "Vision 2020" initiative aimed to ensure no one would be killed or seriously injured in a new Volvo by 2020</li>
+        </ul>
+    </section>
+
+    <section id="history" class="long-text">
+        <h2>History</h2>
+        <h3>Audi</h3>
+        <ul>
+            <li>Origins (1909-1932): Founded by August Horch after leaving his previous company, Horch. The name "Audi" is the Latin translation of "Horch" (meaning "listen").</li>
+            <li>Formation of Auto Union (1932): Audi merged with DKW, Horch, and Wanderer to form Auto Union, represented by the four-ring logo still used by Audi today.</li>
+            <li>Volkswagen Acquisition (1964): After World War II and various reorganizations, Auto Union was acquired by Volkswagen, setting the stage for Audi's modern era.</li>
+            <li>Quattro Revolution (1980): The introduction of the Audi Quattro with permanent all-wheel drive revolutionized rally racing and established a key technological pillar for the brand.</li>
+            <li>Aluminum Innovation (1994): The Audi A8 pioneered the Audi Space Frame, an aluminum construction that reduced weight while maintaining structural integrity.</li>
+            <li>TDI Diesel Technology (1990s): Audi helped popularize diesel engines in passenger cars, particularly with their TDI (Turbocharged Direct Injection) technology.</li>
+            <li>Le Mans Dominance (2000-2014): Audi established unprecedented dominance in endurance racing, winning the 24 Hours of Le Mans 13 times, showcasing their engineering prowess.</li>
+        </ul>
+        <h3>Volvo</h3>
+        <ul>
+            <li>Foundation (1927): Founded in Gothenburg, Sweden by Assar Gabrielsson and Gustaf Larson, with the first car (the ÖV4, nicknamed "Jakob") rolling off the production line that same year.</li>
+            <li>Safety Innovation (1959): Volvo engineer Nils Bohlin invented the three-point safety belt, which Volvo then made available to all manufacturers, potentially saving millions of lives.</li>
+            <li>Introduction of Lambda Sond (1976): Volvo pioneered the three-way catalytic converter with oxygen sensor, reducing harmful emissions by up to 90%.</li>
+            <li>Ford Acquisition (1999): Ford Motor Company purchased Volvo Cars from Volvo Group (which continued as a separate company focusing on commercial vehicles).</li>
+            <li>Geely Acquisition (2010): Chinese automaker Geely purchased Volvo Cars from Ford, providing the investment needed for Volvo's revitalization.</li>
+            <li>New Platform and Design Era (2014-present): The introduction of the XC90 SUV marked Volvo's renaissance with a new design language, Scalable Product Architecture platform, and commitment to electrification.</li>
+            <li>Electrification Commitment (2017): Volvo announced that every new model from 2019 would have an electric motor, signaling one of the industry's most aggressive transitions to electrification.</li>
+        </ul>
+    </section>
+
+    <section id="advantages" class="long-text">
         <h2>Competitive Advantages</h2>
-        <div class="split-section">
-            <section>
+        <section class="split-content">
+            <section class="card">
                 <h3>Audi</h3>
-                <ol>
-                    <li>Performance credibility</li>
-                    <li>Technological Innovation</li>
-                    <li>Brand Prestige</li>
-                    <li>Design Appeal</li>
-                    <li>Broad Product Range</li>
-                </ol>
+            <ol>
+                <li>Performance credibility</li>
+                <li>Technological Innovation</li>
+                <li>Brand Prestige</li>
+                <li>Design Appeal</li>
+                <li>Broad Product Range</li>
+            </ol>
             </section>
-            <section>
+            <section class="card">
                 <h3>Volvo</h3>
                 <ol>
                     <li>Safety Leadership</li>
@@ -158,15 +129,11 @@
                     <li>Ethical Brand Pereception</li>
                 </ol>
             </section>
-        </div>
-    </section>
-
-    <section id="models">
-        <h2>Model Range Comparison</h2>
+        </section>
     </section>
 
     <footer>
-
+        <p>Copyright &copy 2025 Brad Jeschonek</p>
     </footer>
 
 </body>
