building second page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audi vs. Volvo - Competitive Comparison</title>
-    
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header class="home-header">
-        <h1>Audi vs. Volvo</h1>
-    </header>
 
     <nav class="home-nav">
         <ul class="page-links">
@@ -24,6 +20,12 @@
         </ul>
         <a href="./models.html"><button id="models-btn">See Models</button></a>
     </nav>
+
+    <header class="home-header">
+        <h1>Audi vs. Volvo</h1>
+        <!-- Add animation for h1, add downward arrow animation -->
+        <div class="down-arrow"></div>
+    </header>
     
     <section id="philosophy" class="long-text">
         <h2>Brand Philosophy and Positioning</h2>
