--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-    <nav class="home-nav">
-        <ul class="page-links">
-        <li><a href="#philosophy">Philosophy</a></li>
-        <li><a href="#design">Design</a></li>
-        <li><a href="#engineering">Engineering</a></li>
-        <li><a href="#safety">Safety</a></li>
-        <li><a href="#history">History</a></li>
-        <li><a href="#advantages">Advantages</a></li>
+    <nav class="top-nav">
+        <ul class="nav-links">
+            <li><a href="#philosophy">Philosophy</a></li>
+            <li><a href="#design">Design</a></li>
+            <li><a href="#engineering">Engineering</a></li>
+            <li><a href="#safety">Safety</a></li>
+            <li><a href="#history">History</a></li>
+            <li><a href="#advantages">Advantages</a></li>
         </ul>
-        <a href="./models.html"><button id="models-btn">See Models</button></a>
+        <a href="./models.html"><button class="standard-btn">See Models</button></a>
     </nav>
 
     <header class="home-header">
@@ -27,7 +27,7 @@
         <div class="down-arrow"></div>
     </header>
     
-    <section id="philosophy" class="long-text">
+    <section id="philosophy" class="text-section">
         <h2>Brand Philosophy and Positioning</h2>
         <p>
             Audi positions itself as a premium German engineering brand focused on technological advancement, performance, and sophisticated design. Their slogan "Vorsprung durch Technik" (Progress through Technology) encapsulates their commitment to innovation. Audi competes directly with other German luxury brands like BMW and Mercedes-Benz.
@@ -37,7 +37,7 @@
         </p>
     </section>
 
-    <section id="design" class="long-text">
+    <section id="design" class="text-section">
         <h2>Design Language and Aesthetics</h2>
         <p>
             Audi is known for clean, minimalist yet aggressive styling with sharp lines and a distinctive front grille (the "Singleframe" grille). Their interiors feature high-quality materials and a technology-forward approach with digital displays. Audi designs tend to be more emotionally driven, with a focus on creating visually striking vehicles.
@@ -47,7 +47,7 @@
         </p>
     </section>
 
-    <section id="engineering" class="long-text">
+    <section id="engineering" class="text-section">
         <h2>Engineering Performance</h2>
         <p>
             Audi places significant emphasis on performance engineering. They pioneered Quattro all-wheel drive technology, which has become central to their brand identity. Audi vehicles typically offer:
@@ -69,7 +69,7 @@
         </ul>
     </section>
 
-    <section id="safety" class="long-text">
+    <section id="safety" class="text-section">
         <h2>Safety Approach</h2>
         <p>
             Audi implements comprehensive safety systems as expected of a premium brand, with a focus on preventative technology and driver assistance features. Their safety approach is part of their broader technological package.
@@ -85,7 +85,7 @@
         </ul>
     </section>
 
-    <section id="history" class="long-text">
+    <section id="history" class="text-section">
         <h2>History</h2>
         <h3>Audi</h3>
         <ul>
@@ -109,9 +109,9 @@
         </ul>
     </section>
 
-    <section id="advantages" class="long-text">
+    <section id="advantages" class="text-section">
         <h2>Competitive Advantages</h2>
-        <section class="split-content">
+        <div class="split-content">
             <section class="card">
                 <h3>Audi</h3>
             <ol>
@@ -121,7 +121,7 @@
                 <li>Design Appeal</li>
                 <li>Broad Product Range</li>
             </ol>
-            </section>
+            </div>
             <section class="card">
                 <h3>Volvo</h3>
                 <ol>
@@ -131,6 +131,15 @@
                     <li>Family-friendly Focus</li>
                     <li>Ethical Brand Pereception</li>
                 </ol>
+            </section>
+        </div>
+    </section>
+
+    <section id="resources">
+        <h2>Helpful Resources</h2>
+        <section class="split-content">
+            <section class="card">
+
             </section>
         </section>
     </section>
