--- a/models.html
+++ b/models.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    <nav class="home-nav">
-        <ul class="page-links">
+    <nav class="top-nav">
+        <ul class="nav-links">
         <li><a href="#xc40">XC40</a></li>
         <li><a href="#xc60">XC60</a></li>
         <li><a href="#xc90">XC90</a></li>
         </ul>
-        <a href="./index.html"><button id="models-btn">Brand Comparison</button></a>
+        <a href="./index.html"><button class="standard-btn">Brand Comparison</button></a>
     </nav>
     
     <header class="model-header">
