--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#safety">Safety</a></li>
             <li><a href="#history">History</a></li>
             <li><a href="#advantages">Advantages</a></li>
+            <li><a href="#resources">Resources</a></li>
         </ul>
         <a href="./models.html"><button class="standard-btn">See Models</button></a>
     </nav>
@@ -112,17 +113,17 @@
     <section id="advantages" class="text-section">
         <h2>Competitive Advantages</h2>
         <div class="split-content">
-            <section class="card">
+            <div>
                 <h3>Audi</h3>
-            <ol>
-                <li>Performance credibility</li>
-                <li>Technological Innovation</li>
-                <li>Brand Prestige</li>
-                <li>Design Appeal</li>
-                <li>Broad Product Range</li>
-            </ol>
+                <ol>
+                    <li>Performance credibility</li>
+                    <li>Technological Innovation</li>
+                    <li>Brand Prestige</li>
+                    <li>Design Appeal</li>
+                    <li>Broad Product Range</li>
+                </ol>
             </div>
-            <section class="card">
+            <div>
                 <h3>Volvo</h3>
                 <ol>
                     <li>Safety Leadership</li>
@@ -131,17 +132,26 @@
                     <li>Family-friendly Focus</li>
                     <li>Ethical Brand Pereception</li>
                 </ol>
-            </section>
+            </div>
         </div>
     </section>
 
-    <section id="resources">
+    <section id="resources" class="text-section">
         <h2>Helpful Resources</h2>
-        <section class="split-content">
-            <section class="card">
-
-            </section>
-        </section>
+        <div class="split-content">
+            <div class="card">
+                <img src="" alt="">
+                <h3>Audi's Website</h3>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Volvo's Website</h3>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Audi Comparison Tool</h3>
+            </div>
+        </div>
     </section>
 
     <footer>
