added media queries, added slidshows and images for models page

--- a/models.html
+++ b/models.html
@@ -6,6 +6,7 @@
     <title>Audi vs Volvo - Model Comparison</title>
 
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -26,11 +27,52 @@
 
         <div class="slideshow-container">
             <div class="slide">
-                <div class="slide-number">1/3</div>
-                <img src="" alt="" class="slide-img">
+                <div class="slide-number">1/10</div>
+                <img src="/images/xc40/xc40-exterior.avif" alt="XC40 exterior view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slid-number">2/10</div>
+                <img src="/images/xc40/xc40-front-close.avif" alt="XC40 front close up" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">3/10</div>
+                <img src="/images/xc40/xc40-front.avif" alt="XC40 front view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">4/10</div>
+                <img src="/images/xc40/xc40-rear-close.avif" alt="XC40 rear and tail light" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">5/10</div>
+                <img src="/images/xc40/xc40-side.avif" alt="XC40 side view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">6/10</div>
+                <img src="/images/xc40/xc40-wheel.avif" alt="XC40 wheels" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">7/10</div>
+                <img src="/images/xc40/xc40-infotainment.avif" alt="XC40 infotainment screen" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">8/10</div>
+                <img src="/images/xc40/xc40-seats.avif" alt="XC40 seats" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">9/10</div>
+                <img src="/images/xc40/xc40-speedo.avif" alt="XC40 speedometer and tachometer" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">10/10</div>
+                <img src="/images/xc40/xc40-trunk.avif" alt="XC40 trunk loaded with luggage." class="slide-img">
             </div>
             <a class="previous" onclick="changeSlides(-1)"></a>
             <a class="next" onclick="changeSlides(1)"></a>
+        </div>
+
+        <div class="gallery">
+            <img src="images/q3/q3-exterior.avif" alt="Exterior view of Q3">
+            <img src="images/q3/q3-interior.avif" alt="Interior of Q3">
         </div>
     </section>
 
@@ -38,7 +80,33 @@
         <h2>Audi Q5 vs Volvo XC60</h2>
 
         <div class="slideshow-container">
+            <div class="slide">
+                <div class="slide-number">1/5</div>
+                <img src="/images/xc60/xc60-exterior.avif" alt="XC60 exterior view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slid-number">2/5</div>
+                <img src="/images/xc60/xc60-front.avif" alt="XC40 front view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">3/5</div>
+                <img src="/images/xc60/xc60-rear.avif" alt="XC60 rear view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">4/5</div>
+                <img src="/images/xc60/xc60-interior.avif" alt="XC60 interior design" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">5/5</div>
+                <img src="/images/xc60/xc60-interior2.avif" alt="XC60 interior details" class="slide-img">
+            </div>
+            <a class="previous" onclick="changeSlides(-1)"></a>
+            <a class="next" onclick="changeSlides(1)"></a>
+        </div>
 
+        <div class="gallery">
+            <img src="images/q5/q5-exterior.avif" alt="Exterior view of Q5">
+            <img src="images/q5/q5-interior.avif" alt="Interior view of Q5">
         </div>
     </section>
 
@@ -46,7 +114,29 @@
         <h2>Audi Q7 vs Volvo XC90</h2>
 
         <div class="slideshow-container">
-            
+            <div class="slide">
+                <div class="slide-number">1/4</div>
+                <img src="/images/xc90/xc90-exterior.avif" alt="XC90 exterior view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slid-number">2/4</div>
+                <img src="/images/xc90/xc90-front.avif" alt="XC90 front view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">3/4</div>
+                <img src="/images/xc90/xc90-rear.avif" alt="XC90 rear view" class="slide-img">
+            </div>
+            <div class="slide">
+                <div class="slide-number">4/4</div>
+                <img src="/images/xc90/xc90-interior.avif" alt="XC90 interior styling" class="slide-img">
+            </div>
+            <a class="previous" onclick="changeSlides(-1)"></a>
+            <a class="next" onclick="changeSlides(1)"></a>
+        </div>
+
+        <div class="gallery">
+            <img src="images/q7/q7-exterior-boat.avif" alt="Exterior view of Q7 towing boat">
+            <img src="images/q7/q7-interior.avif" alt="Interior view of the Q7">
         </div>
     </section>
 
